--- a/src/html/views/cart.html
+++ b/src/html/views/cart.html
@@ -62,7 +62,7 @@
                 <div class="cartblock__items">
                   <div class="cartblock__item cartblock__item_image">
                     <div class="cartblock__product">
-                      <div class="cartproduct">
+                      <a href='#' class="cartproduct">
                         <div class="cartproduct__image">
                           <div class="productcard__stickers">
                             <div class="productcard__sticker">
@@ -76,13 +76,13 @@
                           </div><!-- /.cartproduct__img -->
                         </div><!-- /.cartproduct__image -->
                         <div class="cartproduct__info">
-                          <div class="cartproduct__title"><a href="">Стейки трески</a></div>
+                          <div class="cartproduct__title">Стейки трески</div>
                           <!-- /.cartproduct__title -->
                           <div class="cartproduct__params">
                             <div class="cartproduct__param">~ 500 г</div><!-- /.cartproduct__param -->
                           </div><!-- /.cartproduct__params -->
                         </div><!-- /.cartproduct__info -->
-                      </div><!-- /.cartproduct -->
+                      </a><!-- /.cartproduct -->
                     </div><!-- /.cartblock__product -->
                   </div><!-- /.cartblock__item cartblock__item_image -->
                   <div class="cartblock__item cartblock__item_price">
@@ -142,7 +142,7 @@
                 <div class="cartblock__items">
                   <div class="cartblock__item cartblock__item_image">
                     <div class="cartblock__product">
-                      <div class="cartproduct">
+                      <a href='#' class="cartproduct">
                         <div class="cartproduct__image">
                           <div class="productcard__stickers">
                             <div class="productcard__sticker">
@@ -156,13 +156,13 @@
                           </div><!-- /.cartproduct__img -->
                         </div><!-- /.cartproduct__image -->
                         <div class="cartproduct__info">
-                          <div class="cartproduct__title"><a href="">Кижуч потрошеный без головы</a></div>
+                          <div class="cartproduct__title">Кижуч потрошеный без головы</div>
                           <!-- /.cartproduct__title -->
                           <div class="cartproduct__params">
                             <div class="cartproduct__param">~ 2000 г</div><!-- /.cartproduct__param -->
                           </div><!-- /.cartproduct__params -->
                         </div><!-- /.cartproduct__info -->
-                      </div><!-- /.cartproduct -->
+                      </a><!-- /.cartproduct -->
                     </div><!-- /.cartblock__product -->
                   </div><!-- /.cartblock__item cartblock__item_image -->
                   <div class="cartblock__item cartblock__item_price">
@@ -220,7 +220,7 @@
                 <div class="cartblock__items">
                   <div class="cartblock__item cartblock__item_image">
                     <div class="cartblock__product">
-                      <div class="cartproduct">
+                      <a href='#' class="cartproduct">
                         <div class="cartproduct__image">
                           <div class="productcard__stickers">
                             <div class="productcard__sticker">
@@ -234,13 +234,13 @@
                           </div><!-- /.cartproduct__img -->
                         </div><!-- /.cartproduct__image -->
                         <div class="cartproduct__info">
-                          <div class="cartproduct__title"><a href="">Стейки трески</a></div>
+                          <div class="cartproduct__title">Стейки трески</div>
                           <!-- /.cartproduct__title -->
                           <div class="cartproduct__params">
                             <div class="cartproduct__param">~ 500 г</div><!-- /.cartproduct__param -->
                           </div><!-- /.cartproduct__params -->
                         </div><!-- /.cartproduct__info -->
-                      </div><!-- /.cartproduct -->
+                      </a><!-- /.cartproduct -->
                     </div><!-- /.cartblock__product -->
                   </div><!-- /.cartblock__item cartblock__item_image -->
                   <div class="cartblock__item cartblock__item_price">
