--- a/src/html/views/order.html
+++ b/src/html/views/order.html
@@ -185,7 +185,7 @@
                         <div class="carttotal__product">
                           <div class="carttotal__items">
                             <div class="carttotal__item carttotal__item_image">
-                              <div class="cartproduct">
+                              <a href='#' class="cartproduct">
                                 <div class="cartproduct__image">
                                   <div class="productcard__stickers">
                                     <div class="productcard__sticker">
@@ -199,13 +199,13 @@
                                   </div><!-- /.cartproduct__img -->
                                 </div><!-- /.cartproduct__image -->
                                 <div class="cartproduct__info">
-                                  <div class="cartproduct__title"><a href="">Стейки трески</a></div>
+                                  <div class="cartproduct__title">Стейки трески</div>
                                   <!-- /.cartproduct__title -->
                                   <div class="cartproduct__params">
                                     <div class="cartproduct__param">500 г</div><!-- /.cartproduct__param -->
                                   </div><!-- /.cartproduct__params -->
                                 </div><!-- /.cartproduct__info -->
-                              </div><!-- /.cartproduct -->
+                              </a><!-- /.cartproduct -->
                             </div><!-- /.carttotal__item carttotal__item_image -->
                             <div class="carttotal__item carttotal__item_count">
                               1 шт.
@@ -218,7 +218,7 @@
                         <div class="carttotal__product">
                           <div class="carttotal__items">
                             <div class="carttotal__item carttotal__item_image">
-                              <div class="cartproduct">
+                              <a href='#' class="cartproduct">
                                 <div class="cartproduct__image">
                                   <div class="productcard__stickers">
                                     <div class="productcard__sticker">
@@ -232,13 +232,13 @@
                                   </div><!-- /.cartproduct__img -->
                                 </div><!-- /.cartproduct__image -->
                                 <div class="cartproduct__info">
-                                  <div class="cartproduct__title"><a href="">Стейки трески</a></div>
+                                  <div class="cartproduct__title">Стейки трески</div>
                                   <!-- /.cartproduct__title -->
                                   <div class="cartproduct__params">
                                     <div class="cartproduct__param">500 г</div><!-- /.cartproduct__param -->
                                   </div><!-- /.cartproduct__params -->
                                 </div><!-- /.cartproduct__info -->
-                              </div><!-- /.cartproduct -->
+                              </a><!-- /.cartproduct -->
                             </div><!-- /.carttotal__item carttotal__item_image -->
                             <div class="carttotal__item carttotal__item_count">
                               1 шт.
@@ -251,7 +251,7 @@
                         <div class="carttotal__product">
                           <div class="carttotal__items">
                             <div class="carttotal__item carttotal__item_image">
-                              <div class="cartproduct">
+                              <a href='#' class="cartproduct">
                                 <div class="cartproduct__image">
                                   <div class="productcard__stickers">
                                     <div class="productcard__sticker">
@@ -265,14 +265,14 @@
                                   </div><!-- /.cartproduct__img -->
                                 </div><!-- /.cartproduct__image -->
                                 <div class="cartproduct__info">
-                                  <div class="cartproduct__title"><a href="">Дорадо потрошеная с головой, без чешуи</a>
+                                  <div class="cartproduct__title">Дорадо потрошеная с головой, без чешуи
                                   </div>
                                   <!-- /.cartproduct__title -->
                                   <div class="cartproduct__params">
                                     <div class="cartproduct__param">500 г</div><!-- /.cartproduct__param -->
                                   </div><!-- /.cartproduct__params -->
                                 </div><!-- /.cartproduct__info -->
-                              </div><!-- /.cartproduct -->
+                              </a><!-- /.cartproduct -->
                             </div><!-- /.carttotal__item carttotal__item_image -->
                             <div class="carttotal__item carttotal__item_count">
                               111 шт.
