--- a/src/html/views/product_type2.html
+++ b/src/html/views/product_type2.html
@@ -111,8 +111,8 @@
                       <div class="detailparam__content">
                         <span class="detailparam__text ">
 
-                          Состав: <b>Состав: осетр (70г),рис,грецкие орехи,ткемали <br>
-                          (чеснок,кинза,соль,мята,сахар,вода,укроп,сливы,красный перец),хмели-сунели,лук репчатый,чеснок,масло растительное,петрушка,укроп,лавровый лист,черный перец,соль,вода)</b> </span>
+                          Состав: <b>Состав: осетр (70г), рис, грецкие орехи, ткемали <br>
+                          (чеснок, кинза, соль, мята,сахар вода, укроп, сливы, красный перец),хмели-сунели ,лук репчатый, чеснок, масло растительное, петрушка,укроп, авровый лист, черный перец, соль,вода)</b> </span>
                         
                         
                        
@@ -293,7 +293,7 @@
                         <tbody>
                           <tr>
                             <td>Пищевая ценность на 100 г:</td>
-                            <td>осетр (70г),рис,грецкие орехи,ткемали (чеснок,кинза,соль,мята,сахар,вода,укроп,сливы,красный перец),хмели-сунели,лук репчатый,чеснок,масло растительное,петрушка,укроп,лавровый лист,черный перец,соль,вода</td>
+                            <td>осетр (70г),рис,грецкие орехи, ткемали (чеснок, кинза, соль, мята,сахар,вода,укроп,сливы,красный перец), хмели-сунели, лук репчатый, чеснок, масло растительное,петрушка,укроп,лавровый лист,черный перец,соль,вода</td>
                           </tr>
                           <tr>
                             <td>Энергетическая ценность на 100 г:</td>
