--- a/src/html/views/abouе_new.html
+++ b/src/html/views/abouе_new.html
@@ -100,7 +100,7 @@
               </div><!-- /.seoblock -->
             </div>
 
-          <div class="pageblocksl">
+          <div class="pageblocksl pageblocksl_small">
             <div class="linebanner">
               <div class="container">
                 <div class="linebanner__wrapper">
@@ -134,15 +134,7 @@
                     <img src="img/fullgallery3.png" alt="">
                   </a><!-- /.fullgallery__item -->
                 </div><!-- /.fullgallery__slide -->
-                <div class="fullgallery__slide">
-                  <a href="img/fullgallery3.png" data-lightbox='fullgallery' class="fullgallery__item">
-                    <img src="img/fullgallery3.png" alt="">
-                  </a><!-- /.fullgallery__item -->
-                </div><!-- /.fullgallery__slide -->
-                <div class="fullgallery__slide">
-                  <a href="img/fullgallery3.png" data-lightbox='fullgallery' class="fullgallery__item">
-                    <img src="img/fullgallery3.png" alt="">
-                  </a><!-- /.fullgallery__item -->
+           
                 </div><!-- /.fullgallery__slide -->
               </div><!-- /.fullgallery__slider -->
             </div><!-- /.fullgallery__container -->
